--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-sanity": "^3.1.3",
     "prisma": "^4.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
