--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Form.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Form.tsx"],
   "exclude": ["node_modules"]
 }
